--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "extension.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "buildExtComp": "babel --presets es2015 --presets react --watch ./ExtensionComponent.jsx -o ./ExtensionComponent.js",
-    "buildAll": "babel --presets es2015 --presets react --watch ./*.jsx --out-dir ./"
+    "buildAll": "babel --presets es2015,react --watch '*.jsx' --out-dir ./"
   },
   "repository": {
     "type": "git",
@@ -22,16 +21,5 @@
     "url": "https://github.com/tagspaces/viewerMD/issues"
   },
   "homepage": "https://github.com/tagspaces/viewerMD#readme",
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "webpack": "^2.5.1"
-  }
+  "devDependencies": { }
 }
